--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,33 @@
+@import url("https://fonts.cdnfonts.com/css/calibri");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply font-sans;
+  @apply bg-background;
+}
+
+* {
+  font-family: "Calibri", "Candara", "Segoe", "Segoe UI", "Optima", "Arial",
+    sans-serif;
+}
+
+/* Optional: Add some default styling */
+html {
+  letter-spacing: 2px;
+  line-height: 1.6;
+}
+
 :root {
-  --background: #ffffff;
+  --background: #0e1321;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #171717;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
